made some corrections to content

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ Responsive Web Design
 
 <fieldset>
 <p>
-The average American consumer, in a typical day, will view their news on their phone, perform school work on their laptop/Desktop, and then come home, relax and watch a show on their tablet. The demand to have a
-uniform experience while viewing webpages from anyone of these hardware platforms is becoming more of a necessity. 
+The average American consumer, in a typical day, will view the news on their phone, perform school work on their laptop/Desktop, and then come home, relax and watch a show on their tablet. The demand to have a
+uniform web browsing experience while viewing webpages from anyone of these hardware platforms is becoming more of a necessity. 
 </p>
 <p>
-Google, the largest search engine provider, in America holds an astounding 75% of the search engine market share. And for the past few years this particular company has thrown is support behind the need for Response Web Design. A individual company which provides one unified website 
-for all hardware platforms, allows Google to only need to index one website, instead of multiple websites catering to different platforms.  The search engine provider also understands that 
-user experience will benefit postively through RWD.  Sharing a hyperlink from a mobile website to a user how is on a desktop, will only lessen the experience. 
+Google, the largest search engine provider in America holds an astounding 75% of the search engine market share, today. And for the past few years this particular company has thrown its support behind the need for Response Web Design. An individual company which provides one unified website 
+for all hardware platforms, allows Google to only need to index one website, instead of multiple websites catering to different platforms.  The search engine provider also understands that the general
+user experience will benefit postively through RWD.  Cross platform incapatibility, will only lessen the experience. 
 </p>
 <p>
 The biggest benefit, as stated before is that with the use of only one website, the enduser will have a more unform and consisent experience, no matter what hardware platform they may be utilizing at any given time.
